--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -10,6 +10,7 @@
 
 .paper-container a {
   color: #405863;
+  font-size: 24px;
   text-decoration: none;
   font-weight: 500;
 }
@@ -56,8 +57,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 4rem;
   }
   .proj-description {
-    padding-left: 0rem;
+    padding-left: 0.5rem;
+    padding-top: 0.2rem;
   }
+  .paper-container a {
+    font-size: 16px;
+  }
+  .proj-container:hover {
+    transform: none;
+  }
+  .proj-pic {
+    width: 320px;
+  }
+
 }
